# sweety-ros2-amr

./: .gitkeep_src  README.md  README_WORKSPACE.md  colcon_ws.sh
src/sweety_obstacle_avoidance/: CMakeLists.txt  package.xml  setup.py
src/sweety_obstacle_avoidance/sweety_obstacle_avoidance/: __init__.py  obstacle_avoidance_node.py
src/sweety_slam/: CMakeLists.txt  package.xml  setup.py
src/sweety_slam/sweety_slam/: __init__.py  slam_node.py
