<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sweety_slam</name>
  <version>0.1.0</version>
  <description>SLAM implementation for Sweety ROS2 AMR</description>
  <maintainer email="mohammedfarazff786@example.com">Mohammed Faraz</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/mohammedfarazff786/sweety-ros2-amr</url>
  <author email="mohammedfarazff786@example.com">Mohammed Faraz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
